PLF-1484 : Add debug configuration for running scripts for unix and windows