@@ -27,13 +27,19 @@ cd %BIN_DIR%
 rem Sets some variables
 set LOG_OPTS=-Dorg.apache.commons.logging.Log=org.apache.commons.logging.impl.SimpleLog
 set SECURITY_OPTS=-Djava.security.auth.login.config=..\conf\jaas.conf
-set EXO_OPTS=-Dexo.product.developing=true -Dexo.conf.dir.name=gatein\conf
-set EXO_CONFIG_OPTS=-Dorg.exoplatform.container.configuration.debug
+set JMX_OPTS=-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=6969 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false
+set EXO_OPTS=-Dexo.product.developing=false -Dexo.conf.dir.name=gatein/conf
+set EXO_CLOUD_OPTS=-javaagent:..\lib\cloud-instrument-1.0-Alpha09.jar=..\gatein\conf\cloud\agent-configuration.xml -Dtenant.masterhost=localhost -Dtenant.repository.name=repository -Dtenant.jcr.data.dir=../gatein/data/jcr
+set EXO_CLOUD_SECURITY_OPTS=-Djava.security.manager=org.exoplatform.cloudmanagement.security.TenantSecurityManager -Djava.security.policy==..\conf\catalina.policy
+
+@REM Remote debug configuration
 set REMOTE_DEBUG=-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
-set EXO_PROFILES=-Dexo.profiles=default
-set JAVA_OPTS=-Xms256m -Xmx1024m -XX:MaxPermSize=256m %LOG_OPTS% %SECURITY_OPTS% %EXO_OPTS% %EXO_CONFIG_OPTS% %REMOTE_DEBUG% %EXO_PROFILES%
-set JPDA_TRANSPORT=dt_socket
-set JPDA_ADDRESS=8000
+
+if "%EXO_PROFILES%" == "" (
+  set EXO_PROFILES=-Dexo.profiles=default,cloud
+)
+
+set JAVA_OPTS=-Xms512m -Xmx2g -XX:MaxPermSize=256m %LOG_OPTS% %SECURITY_OPTS% %EXO_CLOUD_SECURITY_OPTS% %EXO_OPTS% %EXO_PROFILES% %EXO_CLOUD_OPTS% %JMX_OPTS% %REMOTE_DEBUG%
 
 rem Launches the server
 call catalina.bat %*
